Fixed line spacing issue at proficiancy text

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -20,7 +20,6 @@
   overflow: hidden;
 }
 .skill {
-  line-height: 3.5vw;
   margin-bottom: 1.5rem;
 }
 
@@ -71,5 +70,9 @@
   .skills-image {
     display: none;
     order: 2;
+  }
+  .skill > p {
+    line-height: 1.6;
+    margin-bottom: 0.6rem;
   }
 }
